@@ -1,3 +1,8 @@
+2004-02-14  Yusei Tahara  <tahara@timedia.co.jp>
+
+	* src/kahua-shell (login-processor): if stdin is not a terminal,
+	password prompt is echoed.
+
 2004-02-11  Nobuo Yamashita  <nobsun@sampou.org>
 
 	* examples/lazy-nqueen/lazy-nqueen.kahua : improved laziness.
